﻿0.7.0
=====

New Features:

  * Special:OrphanedPages added to display un-linked pages (hanspeterklapf).
  * Remove ability to automatically upgrade from versions prior to 0.5.0.
  * "Next" and "prev" diff links added to Special:History to match Mediawiki.
  * Upgrade to Spring Framework 2.5.5.
  * Upgrade to Spring Security 2.0.3.

Bugfixes:

  * JDK 1.6 and greater changed the behavior of the JDBC getColumnName() method
    causing the watchlist tab to break.  Fix suggested by Luc.
  * Virtual wiki default topics with spaces were incorrectly being stored with
    spaces converted to underscores ("Main_Page" instead of "Main Page").
  * Null pointer exception when viewing URLs with no topic and no trailing
    slash of the form "/context/virtual".

Translation Updates:

  * Updated Chinese translations (hfl).
  * Updated Japanese translations (nattolover).
  * Added Slovakian translations (aryan).
  * Updated Swedish translations (martin).


0.6.6
=====

New Features:

  * Significant modifications to the parser to simplify the code, fix
    bugs, and ensure that output is as close as possible to that of Mediawiki.
  * Use Spring-managed transactions for database connections (dallas).
  * Utility added to Special:Maintenance to allow administrators to reset user
    passwords.
  * Utility added to Special:Maintenance to allow administrators to export
    internal database data to CSV.
  * Utility added to Special:Maintenance to allow administartors to migrate
    data from one database to another (dallas).
  * The Special:History page now implements the same UI as Mediawiki with radio
    buttons instead of checkboxes.
  * Unit test coverage has been significantly improved.
  * Support added for definition lists of the form "; term : definition".
  * Support added to allow use of HTML list tags ("ol", "dl", "dt", "li", and
    "ul").
  * Support added for plural wiki links of the form [[Topic]]s.  Suggested by
    axelclk.